feat: Mejoras UI/UX y optimizaciones generales - Implementación de layouts mejorados para categorías de Alimentos y Bebidas - Mejoras en componentes públicos (ProductsSection, ContactActions, Headers) - Optimización de estilos y backgrounds - Nuevos componentes: EditableIndicator, ColorContrast utilities - Actualización de traducciones y configuraciones - Documentación: análisis de proyecto y guías de mejoras

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,9 @@
 # Production Environment Variables
 # Este archivo se usa automáticamente en builds de producción (npm run build)
 
+# URLs públicas - producción usa pymerp.cl
+VITE_PUBLIC_BASE_URL=https://pymerp.cl
+
 # Google Analytics - HABILITADO en producción
 VITE_GA_MEASUREMENT_ID=G-58V5RL01MF
 VITE_GA_DEBUG=false
