feat: Configurar dominio personalizado pymerp.cl para autenticación y mejorar páginas

--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,9 @@
 # URLs públicas - producción usa pymerp.cl
 VITE_PUBLIC_BASE_URL=https://pymerp.cl
 
+# Firebase Auth - dominio personalizado para links /__/auth/action
+VITE_FIREBASE_AUTH_DOMAIN=pymerp.cl
+
 # Google Analytics - HABILITADO en producción
 VITE_GA_MEASUREMENT_ID=G-58V5RL01MF
 VITE_GA_DEBUG=false
