feat: actualizar frontend minimarket y configuración Firestore

--- a/modules/minimarket/frontend/.env.example
+++ b/modules/minimarket/frontend/.env.example
@@ -1,1 +1,11 @@
 VITE_MINIMARKET_API=http://localhost:8088
+# Firebase (mismo proyecto que dashboard 4173) - obligatorio si usas datos del dashboard
+# VITE_FIREBASE_API_KEY=...
+# VITE_FIREBASE_PROJECT_ID=...
+# IMPORTANTE: Con true no se llama al backend 8088 (evita 403 login, 400/404 inventory).
+# Usar true cuando los productos y cuentas vienen del panel http://localhost:4173/dashboard
+VITE_MINIMARKET_USE_FIRESTORE=true
+# Slug de la empresa para cargar productos (ej. demo23 = http://localhost:4173/demo23)
+VITE_MINIMARKET_COMPANY_SLUG=demo23
+# Opcional: company_id fijo en lugar de slug
+# VITE_MINIMARKET_COMPANY_ID=
