chore: remove leaked build artifacts and backup env

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ firebase.json
 functions/.env
 # Remove hosted mirror from repo
 recovery/firebase/hosting/site-mirror/
+# Vercel build artifacts
+.vercel/
+# Local backups
+functions/.env.backup
